--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.50.0",
+    "uuid": "^9.0.1",
     "vanilla-tilt": "^1.8.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
