casino bet details

--- a/.env.development
+++ b/.env.development
@@ -4,18 +4,5 @@ VITE_ENV=development
 #API URL
 VITE_API_URL=https://backapi.smartapi24.com
 
-#UPLOADS URL
-VITE_IMG_PATH=https://ad.frggame.com/uploads/
-# VITE_IMG_PATH=http://localhost:5000/uploads/
-
-# CHAT SOCKET URL
-VITE_CHATSOCKET_URL=https://ad.frggame.com/
-# VITE_CHATSOCKET_URL=http://localhost:5000/
-# VITE_CHATSOCKET_URL=/
-# VITE_CHATSOCKET_URL=http://18.141.177.9:5000/
-
-#PARTNER
-VITE_PARTNER_ID=admin
-
-# X-API-KEY
-VITE_XAPI_KEY=12345
+#PUBLIC URL
+VITE_PUBLIC_PATH=/public
