--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "numeral": "^2.0.6",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.50.0",
