change api url for v3

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 VITE_ENV=development
 
 #API URL
-VITE_API_URL=https://backapi.smartapi24.com
+VITE_API_URL=https://backend.smartapi48.com
 
 #PUBLIC URL
 VITE_PUBLIC_PATH=/public
